--- a/indexl.html
+++ b/indexl.html
@@ -12,6 +12,7 @@
 
   <!-- Slick -->
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
   <!-- The Final Countdown -->
@@ -23,7 +24,143 @@
 </head>
 
 <body>
-  안뇽
+
+  <section class="visual-area">
+    <div class="visual-list">
+      <div class="visual-item">
+        <div class="visual-img">
+          <img src="./images/visual01-pc.jpg" alt="뮷즈와 슬기롭게 여름나기" class="phidden">
+          <img src="./images/visual01-m.jpg" alt="뮷즈와 슬기롭게 여름나기" class="mhidden">
+        </div>
+        <div class="visual-txt">
+          <span class="sub-txt">2023 여름 상품 기획전</span>
+          <h1 class="main-txt">뮷즈MU:DS와<br>슬기롭게 여름나기</h1>
+        </div>
+      </div>
+      <div class="visual-item">
+        <div class="visual-img">
+          <img src="./images/visual02-pc.jpg" alt="뮷즈와 슬기롭게 여름나기" class="phidden">
+          <img src="./images/visual02-m.jpg" alt="뮷즈와 슬기롭게 여름나기" class="mhidden">
+        </div>
+        <div class="visual-txt">
+          <span class="sub-txt" style="color: #666;">2023년 상반기</span>
+          <h1 class="main-txt" style="color: #333;"> 뮷즈MU:DS와<br>공모 선정작</h1>
+        </div>
+      </div>
+      <div class="visual-item">
+        <div class="visual-img">
+          <img src="./images/visual03-pc.jpg" alt="뮷즈와 슬기롭게 여름나기" class="phidden">
+          <img src="./images/visual03-m.jpg" alt="뮷즈와 슬기롭게 여름나기" class="mhidden">
+        </div>
+        <div class="visual-txt">
+          <span class="sub-txt">국립중앙박물관 특별전시</span>
+          <h1 class="main-txt">&lt;영원한 여정, 특별한 동행&gt;<br>뮷즈 출시</h1>
+        </div>
+      </div>
+  </section>
+
+  <section class="best-area">
+    <div class="common-inner">
+      <div class="title-group">
+        <h2>BEST</h2>
+        <p>베스트 아이템을 만나보세요</p>
+        <a href="#none" class="more-btn">더 보기</a>
+      </div>
+      <div class="best-group">
+        <div class="prd-list">
+          <div class="prd-item">
+            <div class="prd-img-area"><img src="./images/prd01.jpg" alt="신라의 미소 우산 겸 양산"></div>
+            <div class="prd-info-area">
+              <p class="prd-category">우산/양산</p>
+              <p class="prd-name">신라의 미소 우산 겸 양산</p>
+              <p class="prd-desc">국립경주박물관 특화상품</p>
+            </div>
+            <div class="prd-price-area">
+              <p class="current-price">55,000<span>원</span></p>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 99</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+          <div class="prd-item">
+            <div class="prd-img-area"><img src="./images/prd02.jpg" alt="신라의 미소 파우치"></div>
+            <div class="prd-info-area">
+              <p class="prd-category">가방/지갑/파우치</p>
+              <p class="prd-name">신라의 미소 파우치</p>
+              <p class="prd-desc">국립경주박물관 특화상품</p>
+            </div>
+            <div class="prd-price-area">
+              <p class="current-price">23,000<span>원</span></p>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 123</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+          <div class="prd-item soldout">
+            <div class="prd-img-area"><img src="./images/prd03.jpg" alt="상형토기 미니 에코백"></div>
+            <div class="prd-info-area">
+              <p class="prd-category">가방/지갑/파우치</p>
+              <p class="prd-name">상형토기 미니 에코백</p>
+              <p class="prd-desc">&lt;토우 전시, 영원한 여정 특별한 동행&gt;</p>
+            </div>
+            <div class="prd-price-area">
+              <p class="current-price">18,000<span>원</span></p>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 99</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+          <div class="prd-item">
+            <div class="prd-img-area"><img src="./images/prd04.jpg" alt=""></div>
+            <div class="prd-info-area">
+              <p class="prd-category">미니어처</p>
+              <p class="prd-name">반가사유상 미니어처ver3	&#40;83호&#41;</p>
+              <p class="prd-desc">국립중앙박물관 특화상품</p>
+            </div>
+            <div class="prd-price-area">
+              <p class="current-price">65,000<span>원</span></p>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 99</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+  
+
 </body>
 
 </html>
