--- a/indexl.html
+++ b/indexl.html
@@ -76,7 +76,7 @@
               <p class="prd-desc">국립경주박물관 특화상품</p>
             </div>
             <div class="prd-price-area">
-              <p class="current-price">55,000<span>원</span></p>
+              <span class="current-price">55,000<em>원</em></span>
             </div>
             <div class="prd-grade-area">
               <span class="bi bi-star-fill"></span>
@@ -97,7 +97,7 @@
               <p class="prd-desc">국립경주박물관 특화상품</p>
             </div>
             <div class="prd-price-area">
-              <p class="current-price">23,000<span>원</span></p>
+              <span class="current-price">23,000<em>원</em></span>
             </div>
             <div class="prd-grade-area">
               <span class="bi bi-star-fill"></span>
@@ -118,7 +118,7 @@
               <p class="prd-desc">&lt;토우 전시, 영원한 여정 특별한 동행&gt;</p>
             </div>
             <div class="prd-price-area">
-              <p class="current-price">18,000<span>원</span></p>
+              <span class="current-price">18,000<em>원</em></span>
             </div>
             <div class="prd-grade-area">
               <span class="bi bi-star-fill"></span>
@@ -135,11 +135,11 @@
             <div class="prd-img-area"><img src="./images/prd04.jpg" alt=""></div>
             <div class="prd-info-area">
               <p class="prd-category">미니어처</p>
-              <p class="prd-name">반가사유상 미니어처ver3	&#40;83호&#41;</p>
+              <p class="prd-name">반가사유상 미니어처ver3 &#40;83호&#41;</p>
               <p class="prd-desc">국립중앙박물관 특화상품</p>
             </div>
             <div class="prd-price-area">
-              <p class="current-price">65,000<span>원</span></p>
+              <span class="current-price">65,000<em>원</em></span>
             </div>
             <div class="prd-grade-area">
               <span class="bi bi-star-fill"></span>
@@ -158,8 +158,239 @@
     </div>
   </section>
 
+  <section class="new-area">
+    <div class="common-inner">
+      <div class="title-group">
+        <h2>NEW</h2>
+      </div>
+      <div class="new-group">
+        <div class="prd-list">
+          <div class="prd-item">
+            <div class="prd-img-area"><img src="./images/prd05.jpg" alt="롱롱타임플라워 초충도 에디션"></div>
+            <div class="prd-info-area">
+              <p class="prd-category">장식소품</p>
+              <p class="prd-name">롱롱타임플라워 초충도 에디션</p>
+              <p class="prd-desc">뮷즈 x 나난 한정작</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="current-price">65,000<em>원</em></span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 99</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+          <div class="prd-item">
+            <div class="prd-img-area"><img src="./images/prd06.jpg" alt="전주장 종이필통"></div>
+            <div class="prd-info-area">
+              <p class="prd-category">필기류/필통</p>
+              <p class="prd-name">전주장 종이필통</p>
+              <p class="prd-desc">국립전주박물관특화상품</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="current-price">9,000<em>원</em></span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 123</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+          <div class="prd-item">
+            <div class="prd-img-area"><img src="./images/prd07.jpg" alt="백자청화초화문편병 수첩"></div>
+            <div class="prd-info-area">
+              <p class="prd-category">노트/수첩/메모</p>
+              <p class="prd-name">백자청화초화문편병 수첩</p>
+              <p class="prd-desc">국립전주박물관특화상품</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="current-price">18,000<em>원</em></span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 99</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+          <div class="prd-item">
+            <div class="prd-img-area"><img src="./images/prd01.jpg" alt="신라의 미소 우산 겸 양산"></div>
+            <div class="prd-info-area">
+              <p class="prd-category">우산/양산</p>
+              <p class="prd-name">신라의 미소 우산 겸 양산</p>
+              <p class="prd-desc">국립경주박물관 특화상품</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="current-price">55,000<em>원</em></span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 99</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+          <div class="prd-item">
+            <div class="prd-img-area"><img src="./images/prd02.jpg" alt="신라의 미소 파우치"></div>
+            <div class="prd-info-area">
+              <p class="prd-category">가방/지갑/파우치</p>
+              <p class="prd-name">신라의 미소 파우치</p>
+              <p class="prd-desc">국립경주박물관 특화상품</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="current-price">23,000<em>원</em></span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 123</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  
+  <section class="deal-area">
+    <div class="deal-title">
+      <div class="common-inner">
+        <h1>hot deal</h1>
+        <p>시원한 할인 혜택!</p>
+        <a href="#none" class="more-btn">더 보기</a>
+      </div>
+    </div>
+    <div class="common-inner">
+      <div class="deal-group">
+        <div class="prd-list">
+          <div class="prd-item sale">
+            <div class="prd-img-area">
+              <img src="./images/deal01.jpg" alt="신라의 미소 우산 겸 양산">
+              <div class="deal-countdown"></div>
+            </div>
+            <div class="prd-info-area">
+              <p class="prd-category">코스터</p>
+              <p class="prd-name">컬러 콜렉티브 코스터&#40;홍색 명록색 주색&#41;</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="original-price">16,000원</em></span>
+              <span class="current-price">8,250<em>원</em></span>
+              <span class="descount-rate">[50%]</span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 99</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+          <div class="prd-item sale">
+            <div class="prd-img-area">
+              <img src="./images/deal02.jpg" alt="컬러 콜렉티브 코스터&#40;치자색 보라색&#41;">
+              <div class="deal-countdown"></div>
+            </div>
+            <div class="prd-info-area">
+              <p class="prd-category">코스터</p>
+              <p class="prd-name">컬러 콜렉티브 코스터&#40;치자색 보라색&#41;</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="original-price">16,000원</em></span>
+              <span class="current-price">8,250<em>원</em></span>
+              <span class="descount-rate">[50%]</span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 123</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+          <div class="prd-item sale">
+            <div class="prd-img-area">
+              <img src="./images/deal03.jpg" alt="컬러 콜렉티브 코스터&#40;홍색 명록색 청색&#41;">
+              <div class="deal-countdown"></div>
+            </div>
+            <div class="prd-info-area">
+              <p class="prd-category">코스터</p>
+              <p class="prd-name">컬러 콜렉티브 코스터&#40;홍색 명록색 청색&#41;</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="original-price">16,000원</em></span>
+              <span class="current-price">8,250<em>원</em></span>
+              <span class="descount-rate">[50%]</span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 99</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+          <div class="prd-item sale">
+            <div class="prd-img-area">
+              <img src="./images/deal04.jpg" alt="컬러 콜렉티브 코스터&#40;휴색 주색 삼청색&#41;">
+              <div class="deal-countdown"></div>
+            </div>
+            <div class="prd-info-area">
+              <p class="prd-category">코스터</p>
+              <p class="prd-name">컬러 콜렉티브 코스터&#40;휴색 주색 삼청색&#41;</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="original-price">16,000원</em></span>
+              <span class="current-price">8,250<em>원</em></span>
+              <span class="descount-rate">[50%]</span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="bi bi-star-fill"></span>
+              <span class="rating">5.0</span>
+              <span class="riview">리뷰 99</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 </body>
 
