--- a/indexl.html
+++ b/indexl.html
@@ -391,6 +391,194 @@
     </div>
   </section>
 
+  <section class="exhibition-area">
+    <div class="common-inner">
+      <div class="title-group">
+        <div class="img">
+          <img src="./images/exhibition-img01.png" alt="exhibition">
+        </div>
+
+        <div class="title">기획전</div>
+      </div>
+      <div class="deco-img">
+        <img src="./images/exhibition-img02.png" alt="">
+      </div>
+      <ul class="exhibition-list">
+        <li class="exhibition-item">
+          <a href="#none">
+            <div >
+              <p class="exhibition-title">2023 여름상품 기획전</p>
+            </div>
+          </a>
+        </li>
+        <li class="exhibition-item">
+          <a href="#none">
+            <div >
+              <p class="exhibition-title">2023 상반기<br>뮷즈 공모 선정작</p>
+              <p class="exhibition-date">2023-06-25 ~ 2023-08-31</p>
+            </div>
+
+          </a>
+        </li>
+        <li class="exhibition-item">
+          <a href="#none">
+            <div>
+              <p class="exhibition-title">&lt;토우&gt;<br>특별전시 상품 안내</p>
+              <p class="exhibition-date">2023-05-25 ~ 2023-10-09</p>
+            </div>
+          </a>
+        </li>
+        <li class="exhibition-item">
+          <a href="#none">
+            <div>
+              <p class="exhibition-title">casetify<br>콜라보 컬렉션 출시</p>
+              <p class="exhibition-date">2023-05-22 ~ 2023-12-31</p>
+            </div>
+          </a>
+        </li>
+        <li class="exhibition-item">
+          <a href="#none">
+            <div >
+              <p class="exhibition-title">뮤지컬<br>&lt;수박수영장&gt;</p>
+              <p class="exhibition-date">2023-07-01 ~ 2023-08-27</p>
+            </div>
+
+          </a>
+        </li>
+      </ul>
+      <a href="#none" class="btn-all">전체보기</a>
+    </div>
+  </section>
+
+  <section class="book-area">
+    <div class="common-inner">
+      <h1 class="title">책으로 만나는 박물관</h1>
+      <ul class="tab-list">
+        <li class="tab-item is-active" data-tab="tab1" data-name="상설전시도록"></li>
+        <li class="tab-item" data-tab="tab2" data-name="특별전시도록"></li>
+        <li class="tab-item" data-tab="tab3" data-name="어린이도서"></li>
+        <li class="tab-item" data-tab="tab4" data-name="기타"></li>
+      </ul>
+      <div class="tab-content is-active" id="tab1">
+        <div class="prd-item">
+          <div class="prd-img-area">
+            <img src="./images/book01.jpg" alt="그리스가 로마에게, 로마가 그리스에게">
+          </div>
+          <div class="book-info-area">
+            <div class="prd-info-area">
+              <p class="prd-name">그리스가 로마에게, 로마가 그리스에게</p>
+              <p class="prd-desc">국립중앙박물관 상설전시실품</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="current-price">28,000<em>원</em></span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="riview">리뷰 0</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+
+        </div>
+        <div class="prd-item">
+          <div class="prd-img-area">
+            <img src="./images/book02.jpg" alt="국립중앙박물관 상설전시도록(영문)">
+          </div>
+          <div class="book-info-area">
+            <div class="prd-info-area">
+              <p class="prd-name">국립중앙박물관 상설전시도록(영문)</p>
+              <p class="prd-desc">(2023년 개정판)</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="current-price">50,000<em>원</em></span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="riview">리뷰 0</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+        </div>
+        <div class="prd-item">
+          <div class="prd-img-area">
+            <img src="./images/book03.jpg" alt="국립중앙박물관 상설전시 도록(2021년 개정판)">
+          </div>
+          <div class="book-info-area">
+            <div class="prd-info-area">
+              <p class="prd-name">국립중앙박물관 상설전시 도록(2021년 개정판)</p>
+              <p class="prd-desc">국립중앙박물관 특화상품</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="current-price">38,000<em>원</em></span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="riview">리뷰 0</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="tab-content" id="tab2">
+        <div class="prd-item" >
+          <div class="prd-img-area">
+            <img src="./images/book02.jpg" alt="국립중앙박물관 상설전시도록(영문)">
+          </div>
+          <div class="book-info-area">
+            <div class="prd-info-area">
+              <p class="prd-name">국립중앙박물관 상설전시도록(영문)</p>
+              <p class="prd-desc">(2023년 개정판)</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="current-price">50,000<em>원</em></span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="riview">리뷰 0</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+        </div>
+        <div class="prd-item" >
+          <div class="prd-img-area">
+            <img src="./images/book03.jpg" alt="국립중앙박물관 상설전시 도록(2021년 개정판)">
+          </div>
+          <div class="book-info-area">
+            <div class="prd-info-area">
+              <p class="prd-name">국립중앙박물관 상설전시 도록(2021년 개정판)</p>
+              <p class="prd-desc">국립중앙박물관 특화상품</p>
+            </div>
+            <div class="prd-price-area">
+              <span class="current-price">38,000<em>원</em></span>
+            </div>
+            <div class="prd-grade-area">
+              <span class="riview">리뷰 0</span>
+            </div>
+            <div class="prd-badge-area">
+              <span class="prd-badge new-badge">NEW</span>
+              <span class="prd-badge best-badge">BEST</span>
+              <span class="prd-badge md-badge">MD추천</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a href="#none" class="total-btn">전체보기</a>
+    </div>
+  </section>
+
 
 </body>
 
