--- a/indexl.html
+++ b/indexl.html
@@ -70,6 +70,10 @@
       </div>
       <!-- category-menu -->
       <div class="category-menu-area">
+
+        <div class="search-mobile">
+          <input type="text" placeholder="통합검색">
+        </div>
         <div class="category-list">
           <div class="category-item">
             <b>문구/사무</b>
@@ -213,6 +217,7 @@
         </div>
     </section>
 
+    <!-- best -->
     <section class="best-area">
       <div class="common-inner">
         <div class="title-group">
@@ -744,9 +749,9 @@
           <div>
             <h1>MU:DS Channel</h1>
             <div>
-              <a href="#none"><i class="bi bi-youtube"></i></a>
-              <a href="#none"><i class="bi bi-facebook"></i></a>
-              <a href="#none"><i class="bi bi-instagram"></i></a>
+              <a href="#none"><i class="bi bi-youtube sns-item"></i></a>
+              <a href="#none"><i class="bi bi-facebook sns-item"></i></a>
+              <a href="#none"><i class="bi bi-instagram sns-item"></i></a>
             </div>
           </div>
         </div>
