prd_detail_page

--- a/indexl.html
+++ b/indexl.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>뮷즈</title>
 
-
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
@@ -25,7 +24,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container index">
     <!-- header -->
     <header class="header-area">
       <div class="common-inner">
