--- a/html/orderlist.html
+++ b/html/orderlist.html
@@ -24,9 +24,9 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container orderlist">
     <!-- header -->
-    <header class="header-area">
+    <header class="header-area is-active">
       <div class="common-inner">
         <!-- login -->
         <div class="logo-login-group">
@@ -181,23 +181,130 @@
       </div>
     </header>
 
+    <section class="orderlist-area page-layout">
+      <div class="common-inner">
+        <div class="page-layout-content">
+          <!-- 장바구니 -->
+          <div class="cart-area left-box">
+            <h2 class="title">장바구니</h2>
+            <div class="chkAll-group">
+              <span>
+                <input class="chkALl" type="checkbox" checked> <em>2</em>/2
+              </span>
+              <button class="btn-clearAll">전체삭제</button>
+            </div>
+            <div class="cart-list">
+              <div class="cart-item">
+                <div class="chk-status">
+                  <input class="chk" type="checkbox" checked>
+                </div>
+                <div class="prd-thum">
+                  <img src="/images/prd02.jpg" alt="신라의 미소 파우치">
+                </div>
+                <div class="prd-overview">
+                  <div class="prd-info">
+                    <b class="prd-name">신라의 미소 파우치</b>
+                    <div class="prd-option-box">
+                      <dl>
+                        <dt>선택옵션</dt>
+                        <dd>미색</dd>
+                      </dl>
+                      <dl>
+                        <dt>뮷즈가방</dt>
+                        <dd>뮷즈 선물 가방(부직포, 30x36cm)(+2000원)</dd>
+                      </dl>
+                      <button class="optChange-btn">옵션변경</button>
+                    </div>
+                  </div>
+                  <div class="prd-price">
+                    <div>
+                      <span class="current-price">25,000원</span>
+                    </div>
+                  </div>
+                </div>
+                <button class="btn-clear material-icons">clear</button>
+              </div>
+              <div class="cart-item">
+                <div class="chk-status">
+                  <input class="chk" type="checkbox" checked>
+                </div>
+                <div class="prd-thum">
+                  <img src="/images/deal03.jpg" alt="컬러 콜렉티브 코스터(치자색 청색)">
+                </div>
+                <div class="prd-overview">
+                  <div class="prd-info">
+                    <b class="prd-name">컬러 콜렉티브 코스터(치자색 청색)</b>
+                    <div class="prd-option-box">
+                      <dl>
+                        <dt>선택옵션</dt>
+                        <dd>컬러 콜렉티브 코스터(치자색 청색)</dd>
+                      </dl>
+                      <dl>
+                        <dt>뮷즈가방</dt>
+                        <dd>선택안함</dd>
+                      </dl>
+                      <button class="optChange-btn">옵션변경</button>
+                    </div>
+                  </div>
+                  <div class="prd-price">
+                    <div>
+                      <span class="discount-rate">50%</span>
+                      <span class="original-price">16,500원</span>
+                      <span class="current-price">8,250원</span>
+                    </div>
+                  </div>
+                </div>
+                <button class="btn-clear material-icons">clear</button>
+              </div>
+            </div>
+          </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+          <!-- 결제 -->
+          <div class="payment-area right-box">
+            <div class="price-group">
+              <h2 class="title">결제 금액</h2>
+              <div class="current-price">
+                <b>총 결제 금액</b>
+                <span><em>33,250</em>원</span>
+              </div>
+              <div class="original-price">
+                <b>상품 금액</b>
+                <span><em>41,0000</em>원</span>
+              </div>
+              <div class="discount-price">
+                <b>총 할인 금액</b>
+                <span><em>-8,250</em>원</span>
+              </div>
+            </div>
+            <div class="payment-method-group">
+              <h2 class="title">결제 수단</h2>
+                <label>
+                  <input type="radio" name="payment-method"><em></em>카드 전자결제
+                  <b class="free-interest">무이자 할부 지원</b>
+                </label>
+                <label>
+                  <input type="radio" name="payment-method"><em></em>휴대폰 결제
+                </label>
+                <label>
+                  <input type="radio" name="payment-method"><em></em>계좌이체
+                </label>
+                <label>
+                  <input type="radio" name="payment-method">
+                  <em></em><img src="/images/ct-payment-naver.png" alt="네이버페이">네이버페이
+                </label>
+                <label>
+                  <input type="radio" name="payment-method">
+                  <em></em><img src="/images/ct-payment-kakao.png" alt="카카오페이">카카오페이
+                </label>
+                <button class="btn-final-payment">결제하기</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- footer -->
-    <!-- <footer class="footer-area">
+    <footer class="footer-area">
       <div class="common-inner">
         <div class="lnb-group">
           <h1 class="title">국립박물관 문화상품</h1>
@@ -250,7 +357,7 @@
           </address>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
 
 
