--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="common-inner">
         <!-- login -->
         <div class="logo-login-group">
-          <a href="/indexl.html" class="logo"><img src="/images/logo.png" alt=""></a>
+          <a href="/index.html" class="logo"><img src="/images/logo.png" alt=""></a>
           <div class="login-register-btn">
             <button class="btn-login">로그인</button>
             <button class="btn-register" onclick="location.href='/html/register.html'">회원가입</button>
