--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="MU:DS" />
     <meta property="og:description" content="MU:DS renewal portfolio"/>
     <meta property="og:image" content="/images/open-logo.png" />
-    <meta property="og:url" content="https://spectacular-llama-51535e.netlify.app" />
+    <meta property="og:url" content="https://silly-druid-336097.netlify.app" />
 
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
