--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>뮷즈</title>
-    <!--Open Graph-->
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="museumshop" />
-    <meta property="og:title" content="MU:DS" />
-    <meta property="og:description" content="MU:DS renewal portfolio"/>
-    <meta property="og:image" content="/images/open-logo.png" />
-    <meta property="og:url" content="https://silly-druid-336097.netlify.app" />
-
+  <link rel="icon" href="/images/favicon.ico">
+  <title>MU:DS</title>
+  <!--Open Graph-->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="museumshop" />
+  <meta property="og:title" content="MU:DS" />
+  <meta property="og:description" content="MU:DS renewal portfolio"/>
+  <meta property="og:image" content="/images/open-logo.png" />
+  <meta property="og:url" content="https://silly-druid-336097.netlify.app"/>
+  
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
