--- a/html/orderlist.html
+++ b/html/orderlist.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>장바구니</title>
-
+  <link rel="icon" href="/images/favicon.ico">
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
