--- a/html/register.html
+++ b/html/register.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회원가입</title>
-
+  <link rel="icon" href="/images/favicon.ico">
+  <title>MU:DS</title>
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
